# weather_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api_client.rs  main.rs
src/commands/: get_4d_forecast.rs  get_5d_forecast.rs  get_current_weather.rs  mod.rs  update_config_value.rs
src/commands/current_weather/: coordinates.rs  get_current_weather.rs  mod.rs  print_result.rs  weather.rs
src/commands/set_config/: mod.rs  update_config_value.rs
src/entities/: config.rs  five_days_forecast.rs  forecast.rs  mod.rs  place.rs
src/utils/: config.rs
