[package]
name = "forecaster"
version = "0.1.1"
edition = "2021"
description="A simple weather forecaster that takes all the data from https://openweathermap.org/ and displays it in a nice way."
license="MIT"
homepage = "https://github.com/Rukomoynikov/weather_cli"
repository = "https://github.com/Rukomoynikov/weather_cli"
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
directories = "5.0.1"
toml = "0.8.8"
